create a function to get api data and display it on the page

--- a/index.html
+++ b/index.html
@@ -32,6 +32,22 @@
     </aside>
 </div>
 
+<div class="container">
+    <div class="card " style="width: 18rem;">
+        <div class="weatherToday card-body">
+
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="card " style="width: 18rem;" >
+        <div class="weatherStats card-body">
+        </div>
+    </div>
+</div>
+
+
 <!-- jQuery -->
 <script
         src="https://code.jquery.com/jquery-3.5.1.js"
