when page loads it will display a list of previous searches

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <input placeholder="city name" id="searchBar" />
                 <button type="submit" class="searchButton btn btn-primary">Submit</button>
             </form>
-            <div class="col-12 searchResults">
+            <div class="col-12 citiesList">
             </div>
         </div>
         <div class="col-md-4">
