will now display the forecast for the next 5 days

--- a/index.html
+++ b/index.html
@@ -49,11 +49,8 @@
     </div>
 </div>
 
-<div class="row">
-    <aside class="col-md-3">
+<div class="row d-flex justify-content-center foreCast"></div>
 
-    </aside>
-</div>
 
 
 
